Have a reason for why a user is not allowed to participate

--- a/src/client/components/frsForums/frsForums.html
+++ b/src/client/components/frsForums/frsForums.html
@@ -54,7 +54,7 @@
                     </div>
                     <div class="frs-forum frs-right {{ topForum f }}">
                         <div class="frs-infos d-flex flex-column">
-                            <div class="d-flex align-items-center justify-content-evenly flex-fill frs-badges">
+                            <div class="d-flex flex-row align-items-center justify-content-evenly flex-fill frs-badges">
                                 {{#unless uiSMView }}
                                     {{{ badgeModerator f }}}
                                     <div class="frs-ml025"></div>
