--- a/src/client/components/frsForums/frsForums.less
+++ b/src/client/components/frsForums/frsForums.less
@@ -3,9 +3,11 @@
         display: grid;
         grid-template-columns: 10px 1fr auto;
 
+        /*
         .frs-background {
             background-color: green;
         }
+        */
 
         .frs-margin-top-1 {
             grid-column-start: 1;
