--- a/src/client/components/frsPosts/frsPosts.html
+++ b/src/client/components/frsPosts/frsPosts.html
@@ -19,7 +19,10 @@
         </div>
 
         <div class="frs-header">
-            <p class="frs-page-title flex-grow-1">{{ threadTitle }}</p>
+            <div class="d-flex align-items-center">
+                <p class="frs-page-title flex-grow-1">{{ threadTitle }}</p>
+                <p class="frs-page-comment">{{{ writableReason }}}</p>
+            </div>
         </div>
 
         <div class="frs-content">
