--- a/src/client/components/frsManager/frsManager.less
+++ b/src/client/components/frsManager/frsManager.less
@@ -35,12 +35,26 @@
                 align-items: center;
                 width: 100%;
             }
+            .frs-tree-badge {
+                font-size: 80%;
+                padding: 0.55em;
+                width: 2.2em;
+                min-width: 2.2em;
+                max-width: 2.2em;
+                height: 2.2em;
+                min-height: 2.2em;
+                max-height: 2.2em;
+            }
+            .frs-counter {
+                font-weight: normal;
+                font-size: 80%;
+                margin-left: 0.25em;
+                line-height: 1.4em;
+            }
             .frs-tree-btn {
                 margin-left: 0.25em;
             }
-            .frs-buttons {
-                margin-left: 0.5em;
-            }
+            .frs-buttons,
             .frs-badges {
                 margin-left: 1em;
             }
