Display to-be moderated posts

--- a/src/client/components/frsManager/frsManager.less
+++ b/src/client/components/frsManager/frsManager.less
@@ -36,6 +36,7 @@
                 width: 100%;
             }
             .frs-tree-badge {
+                margin-left: 0.25em;
                 font-size: 80%;
                 padding: 0.55em;
                 width: 2.2em;
