--- a/src/client/stylesheets/frs_forums.less
+++ b/src/client/stylesheets/frs_forums.less
@@ -1,6 +1,7 @@
 .frsForums,
 .frsThreads,
-.frsPosts {
+.frsPosts,
+.frsModerate {
     margin-left: 2em;
     margin-right: 2em;
 
@@ -163,6 +164,10 @@ span.frs-moderator {
     font-weight: normal;
     font-size: 65%;
 }
+span.frs-new-thread {
+    padding: 0.4em 0.7em;
+    margin-left: 1em;
+}
 /*
  * COLORS
  */
@@ -192,4 +197,8 @@ button.frs-bg-forum:disabled {
 .frs-bg-forum:not(.badge):hover,
 button.frs-bg-forum:not(.badge):hover {
     background-color: #154360;
+}
+
+.frs-bg-post {
+    background-color: orange;
 }
