--- a/src/client/stylesheets/frs_forums.less
+++ b/src/client/stylesheets/frs_forums.less
@@ -91,6 +91,9 @@
 .frs-ellipsize-2 {
     -webkit-line-clamp: 2;
 }
+.frs-ellipsize-3 {
+    -webkit-line-clamp: 3;
+}
 .frs-ellipsize-4 {
     -webkit-line-clamp: 4;
 }
