--- a/src/client/components/frsModerate/frsModerate.less
+++ b/src/client/components/frsModerate/frsModerate.less
@@ -37,12 +37,17 @@
         }
         .frs-post {
             margin-top: 0.5em;
+            .frs-content {
+                background-color: #e0e0e0;
+                max-height: 3.5em;
+            }
         }
         .frs-post:not( .frs-first ){
             padding-top: 0.5em;
             border-top: 1px solid lightblue;
         }
-        .frs-no-new-post {
+        .frs-no-new-post,
+        .frs-no-forum {
             font-style: italic;
             color: gray;
             font-size: 95%;
