Fix ellipsizing plus read more and less links

--- a/src/client/stylesheets/frs_forums.less
+++ b/src/client/stylesheets/frs_forums.less
@@ -81,6 +81,12 @@
 .frs-dcontents {
     display: contents;
 }
+//.frs-ellipsis-text
+.frs-ellipsis-more,
+.frs-ellipsis-less {
+    font-size: 90%;
+    color: gray;
+}
 .frs-ellipsize {
     // https://stackoverflow.com/questions/15909489/text-overflow-ellipsis-on-two-lines
     display: -webkit-box;
