--- a/src/client/components/frsModerate/frsModerate.html
+++ b/src/client/components/frsModerate/frsModerate.html
@@ -44,7 +44,13 @@
                                     </div>
                                 {{/if}}
                                 <div class="frs-post {{ postFirst f p }}">
-                                    <div class="frs-content">{{{ p.content }}}</div>
+                                    <div class="frs-ellipsis-wrapper" id="post-{{ p._id }}-content">
+                                        <div class="frs-content frs-ellipsis-text">{{{ p.content }}}</div>
+                                        <div class="d-flex justify-content-end align-items-center">
+                                            <a class="frs-ellipsis-more" href='#'>{{ i18n label="ellipsis_more" }}</a>&nbsp;
+                                            <a class="frs-ellipsis-less" href='#'>{{ i18n label="ellipsis_less" }}</a>
+                                        </div>
+                                    </div>
                                 </div>
                                 {{ postEnd }}
                             {{/each}}
