--- a/src/client/components/frsModerate/frsModerate.less
+++ b/src/client/components/frsModerate/frsModerate.less
@@ -13,11 +13,13 @@
         }
     }
     .frs-content {
-        .frs-forum-title {
-            font-weight: bold;
-            font-size: 110%;
+        .frs-forum {
+            .frs-title {
+                font-weight: bold;
+                font-size: 110%;
+            }
         }
-        .frs-forum-title:not( :first-child ){
+        .frs-forum:not( :first-child ){
             margin-top: 0.5em;
             padding-top: 0.5em;
             border-top: 1px solid lightgray;
