Choose the moderation strategy at the forum level (todo #45)

--- a/src/client/components/frs_forum_tab/frs_forum_tab.html
+++ b/src/client/components/frs_forum_tab/frs_forum_tab.html
@@ -3,10 +3,10 @@
 
         <form>
             <label for="" class="form-label form-label-sm frs-one">{{ i18n label="title_label" }}</label>
-            <input type="text" class="form-control form-control-sm frs-title" placeholder="{{ i18n label="title_placeholder" }}" value="{{ forTitle }}" data-frs-field="title" />
+            <input type="text" class="form-control form-control-md frs-title" placeholder="{{ i18n label="title_placeholder" }}" value="{{ forTitle }}" data-frs-field="title" />
 
             <label for="" class="form-label form-label-sm frs-one">{{ i18n label="description_label" }}</label>
-            <textarea class="form-control form-control-sm frs-description" rows="3" placeholder="{{ i18n label="description_placeholder" }}" data-frs-field="displayableDescription" >{{ forDescription }}</textarea>
+            <textarea class="form-control form-control-md frs-description" rows="3" placeholder="{{ i18n label="description_placeholder" }}" data-frs-field="displayableDescription" >{{ forDescription }}</textarea>
 
             <label for="" class="form-label form-label-sm frs-one">{{ i18n label="comment_label" }}</label>
             <textarea class="form-control frs-comment" rows="3" placeholder="{{ i18n label="comment_placeholder" }}" data-frs-field="internalComment">{{ forComment }}</textarea>
@@ -28,17 +28,24 @@
             <div>
                 <input type="checkbox" class="form-check-input form-check-input-sm frs-show-deleted-admin" {{ forDeletedAdmin }} id="admin_{{ id }}" data-frs-field="showDeletedForAdmin" />
                 <label class="form-check-label form-check-label-sm" for="admin_{{ id }}">{{ i18n label="show_deleted_for_admin_label" }}</label>
-           </div>
+            </div>
 
             <div></div>
             <div>
                 <input type="checkbox" class="form-check-input form-check-input-sm frs-show-deleted-user" {{ forDeletedUser }} id="users_{{ id }}" data-frs-field="showDeletedForUsers" />
                 <label class="form-check-label form-check-label-sm" for="users_{{ id }}">{{ i18n label="show_deleted_for_user_label" }}</label>
-           </div>
+                </div>
 
-            <div></div>
-            <div>
-                {{#if isArchived }}
+            <label for="" class="form-label form-label-sm frs-one">{{ i18n label="moderation_label" }}</label>
+            <select class="form-select frs-moderate-select" data-frs-field="moderation">
+                {{#each m in moderations }}
+                    <option {{ modSelected m }} value="{{ m.id }}">{{ m.label }}</option>
+                {{/each}}
+            </select>
+
+            {{#if isArchived }}
+                <div></div>
+                <div>
                     <div class="frs-div-archived">
                         <label class="form-check-label form-check-label-sm frs-line1">{{ i18n label="forum_archived" }}</label>
                         <label class="form-check-label form-check-label-sm frs-line2">{{ forArchivedAtBy }}</label>
@@ -47,11 +54,15 @@
                         <input type="checkbox" class="form-check-input form-check-input-sm frs-unarchive" id="unarchive_{{ id }}" data-frs-field="unarchive" />
                         <label class="form-check-label form-check-label-sm" for="unarchive_{{ id }}">{{ i18n label="unarchive_label" }}</label>
                     </div>
-                {{else}}
+                </div>
+            {{else}}
+                <div></div>
+                <div>
                     <input type="checkbox" class="form-check-input form-check-input-sm frs-archive" id="archive_{{ id }}" data-frs-field="archive" />
                     <label class="form-check-label form-check-label-sm" for="archive_{{ id }}">{{ i18n label="archive_label" }}</label>
-                {{/if}}
-           </div>
+                </div>
+            {{/if}}
+
         </form>
 
     </div>
