--- a/src/client/stylesheets/frs_forums.less
+++ b/src/client/stylesheets/frs_forums.less
@@ -56,11 +56,15 @@
     form {
         display: grid;
         grid-template-columns: auto 1fr;
+        align-items: center;
         column-gap: 0.5em;
         row-gap: 0.5em;
         .frs-one {
             justify-self: end;
             white-space: nowrap;
+        }
+        .frs-div-unarchive {
+            margin-top: 0.5em;
         }
     }
 }
