Display a moderation strategy badge (todo #32)

--- a/src/client/components/frsModerate/frsModerate.html
+++ b/src/client/components/frsModerate/frsModerate.html
@@ -36,6 +36,8 @@
                         <p class="frs-title">{{ f.title }}</p>
                         <div class="frs-ml1"></div>
                         {{{ badgePrivate f }}}
+                        <div class="frs-ml05"></div>
+                        {{{ badgeModeration f }}}
                     </div>
                     <div class="frs-posts">
                         {{#if postsCount f }}
