--- a/src/client/components/frsForums/frsForums.less
+++ b/src/client/components/frsForums/frsForums.less
@@ -71,17 +71,14 @@
             }
             .frs-title {
                 font-weight: bold;
-                font-size: 90%;
-            }
-            .frs-description {
-                font-size: 90%;
             }
             .frs-comment {
                 font-size: 90%;
                 font-style: italic;
             }
+            // same than frsThreads
             .frs-lastpost {
-                font-size: 75%;
+                font-size: 90%;
                 font-style: italic;
                 color: gray;
                 white-space: nowrap;
