--- a/src/client/components/frsManager/frsManager.html
+++ b/src/client/components/frsManager/frsManager.html
@@ -25,10 +25,10 @@
 
         <div class="manager-content container-fluid">
             <div class="tab-pane" id="frsTreeContent" role="tabpanel" aria-labelledby="tree-tab">
-                {{> frs_tree_tab language=language }}
+                {{> frs_tree_tab }}
             </div>
             <div class="tab-pane" id="frsSettingsContent" role="tabpanel" aria-labelledby="settings-tab">
-                {{> frs_settings_tab language=language }}
+                {{> frs_settings_tab }}
             </div>
         </div>
 
