--- a/src/client/components/frsManager/frsManager.less
+++ b/src/client/components/frsManager/frsManager.less
@@ -10,60 +10,33 @@
             padding: 0.5em 0.25em;
             border: solid 1px lightgray;
             border-radius: 0.5em;
-    
-            .jstree-anchor,
-            .jstree-wholerow {
-                line-height: 2.25em;
-                height: 2.25em;
-            }
-            // categories
-            ul > li {
-                color: #138D75;
-                font-weight: bold;
-                i {
-                    display: inline;
-                }
-            }
-            // forums
-            ul > li > ul > li {
-                color: #1F618D;
-                font-weight: bold;
-                display: flex;
-            }
-            a {
-                display: flex;
-                align-items: center;
-                width: 100%;
-            }
-            .frs-tree-badge {
-                margin-left: 0.25em;
-                font-size: 80%;
-                padding: 0.55em;
-                width: 2.2em;
-                min-width: 2.2em;
-                max-width: 2.2em;
-                height: 2.2em;
-                min-height: 2.2em;
-                max-height: 2.2em;
-            }
-            .frs-counter {
-                font-weight: normal;
-                font-size: 80%;
-                margin-left: 0.25em;
-                line-height: 1.2em;
-            }
-            .frs-tree-btn {
-                margin-left: 0.25em;
-            }
-            .frs-buttons,
-            .frs-badges {
-                margin-left: 1em;
-            }
         }
     }
-    .frs-total {
-        display: block;
-        font-size: 90%;
-        font-weight: bold;
+
+    .frs-forums-tree {
+        .jstree-anchor,
+        .jstree-wholerow {
+            line-height: 2.25em;
+            height: 2.25em;
+        }
+        // categories
+        ul > li {
+            color: #138D75;
+            font-weight: bold;
+            i {
+                display: inline;
+            }
+        }
+        // forums
+        ul > li > ul > li {
+            color: #1F618D;
+            font-weight: bold;
+            display: flex;
+        }
+        a {
+            display: flex;
+            align-items: center;
+            width: 100%;
+        }
     }
 }
