--- a/src/client/components/frsPosts/frsPosts.html
+++ b/src/client/components/frsPosts/frsPosts.html
@@ -20,8 +20,8 @@
 
         <div class="frs-header">
             <div class="d-flex align-items-center">
-                <p class="frs-page-title flex-grow-1">{{ threadTitle }}</p>
-                <p class="frs-page-comment">{{{ writableReason }}}</p>
+                <p class="frs-title flex-grow-1">{{ threadTitle }}</p>
+                <p class="frs-comment">{{{ writableReason }}}</p>
             </div>
         </div>
 
