--- a/src/client/components/frsThreads/frsThreads.html
+++ b/src/client/components/frsThreads/frsThreads.html
@@ -23,9 +23,9 @@
 
         <div class="frs-header d-flex align-items-center">
             {{#if hasThreads }}
-                <p class="frs-page-title flex-grow-1">{{ i18n label="page_title" }}</p>
+                <p class="frs-title flex-grow-1">{{ i18n label="page_title" }}</p>
             {{else}}
-                <p class="frs-page-title flex-grow-1"></p>
+                <p class="frs-title flex-grow-1"></p>
             {{/if}}
             <button type="button" class="btn btn-outline-primary btn-sm frs-btn frs-thread-new-btn" data-bs-toggle="button" {{ disableNew }}>{{ i18n label="new" }}</button>
         </div>
