--- a/src/client/components/frsThreads/frsThreads.less
+++ b/src/client/components/frsThreads/frsThreads.less
@@ -16,7 +16,6 @@
     }
     .frs-body {
         table {
-            font-size: 0.9rem;
             margin-top: 0.5em;
             th {
                 color: gray;
@@ -35,8 +34,9 @@
             .frs-thread-title {
                 font-weight: bold;
             }
+            // same than frsForums
             .frs-lastpost {
-                font-size: 80%;
+                font-size: 90%;
                 font-style: italic;
                 color: gray;
                 white-space: nowrap;
