--- a/src/client/components/frs_forum_tab/frs_forum_tab.html
+++ b/src/client/components/frs_forum_tab/frs_forum_tab.html
@@ -50,7 +50,7 @@
                         <label class="form-check-label form-check-label-sm frs-line1">{{ i18n label="forum_archived" }}</label>
                         <label class="form-check-label form-check-label-sm frs-line2">{{ forArchivedAtBy }}</label>
                     </div>
-                    <div class="frs-div-unarchive">
+                    <div class="frs-div-unarchive frs-mt05">
                         <input type="checkbox" class="form-check-input form-check-input-sm frs-unarchive" id="unarchive_{{ id }}" data-frs-field="unarchive" />
                         <label class="form-check-label form-check-label-sm" for="unarchive_{{ id }}">{{ i18n label="unarchive_label" }}</label>
                     </div>
