--- a/src/client/components/frs_tree_tab/frs_tree_tab.html
+++ b/src/client/components/frs_tree_tab/frs_tree_tab.html
@@ -12,7 +12,7 @@
         </div>
 
         <div class="tab-middle">
-            <div id="frsTreeTabTree"></div>
+            <div id="frsTreeTabTree" class="frs-forums-tree"></div>
         </div>
 
         <div class="tab-bottom">
